Create new file via DeepSync Chrome Extension

--- a/RadioScheduler.csproj
+++ b/RadioScheduler.csproj
@@ -83,6 +83,7 @@
     <Compile Include="FileHashHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PrayTime.cs" />
+    <Compile Include="PrayTimeScheduler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadioSchedulerService.cs">
@@ -90,6 +91,7 @@
     </Compile>
     <Compile Include="ScheduleItem.cs" />
     <Compile Include="Scheduler.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="WebServer.cs" />
   </ItemGroup>
   <ItemGroup>
