Update file via DeepSync Chrome Extension

--- a/audio.conf
+++ b/audio.conf
@@ -1,1 +1,35 @@
-//Be
+//Be Naame Khoda
+//FileName: audio.conf
+
+[
+    {
+        "ItemId": 1,
+        "Type": "Periodic",
+        "FilePaths": [
+            { "Path": "audio1.mp3" },
+            { "Path": "folder1", "FolderPlayMode": "All" },
+            { "Path": "audio2.mp3" },
+            { "Path": "folder2", "FolderPlayMode": "Single" }
+        ],
+        "Second": "0",
+        "Minute": "0",
+        "Hour": "8",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "*",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Immediate"
+    },
+    {
+        "ItemId": 2,
+        "Type": "NonPeriodic",
+        "FilePaths": [
+            { "Path": "audio3.mp3" },
+            { "Path": "folder3", "FolderPlayMode": "Single" }
+        ],
+        "Trigger": "morning",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Delayed",
+        "DelayMinutes": 10
+    }
+]
