Update file via DeepSync Chrome Extension

--- a/audio.conf
+++ b/audio.conf
@@ -7,9 +7,7 @@
         "Type": "Periodic",
         "FilePaths": [
             { "Path": "audio1.mp3" },
-            { "Path": "folder1", "FolderPlayMode": "All" },
-            { "Path": "audio2.mp3" },
-            { "Path": "folder2", "FolderPlayMode": "Single" }
+            { "Path": "folder1", "FolderPlayMode": "All" }
         ],
         "Second": "0",
         "Minute": "0",
@@ -22,14 +20,124 @@
     },
     {
         "ItemId": 2,
+        "Type": "Periodic",
+        "FilePaths": [
+            { "Path": "audio2.mp3" },
+            { "Path": "folder2", "FolderPlayMode": "Single" }
+        ],
+        "Second": "0",
+        "Minute": "30",
+        "Hour": "12",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "*",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Immediate"
+    },
+    {
+        "ItemId": 3,
         "Type": "NonPeriodic",
         "FilePaths": [
             { "Path": "audio3.mp3" },
-            { "Path": "folder3", "FolderPlayMode": "Single" }
+            { "Path": "folder3", "FolderPlayMode": "All" }
         ],
         "Trigger": "morning",
         "CalendarType": "Gregorian",
         "TriggerType": "Delayed",
         "DelayMinutes": 10
+    },
+    {
+        "ItemId": 4,
+        "Type": "NonPeriodic",
+        "FilePaths": [
+            { "Path": "audio4.mp3" },
+            { "Path": "folder4", "FolderPlayMode": "Single" }
+        ],
+        "Trigger": "afternoon",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Timed"
+    },
+    {
+        "ItemId": 5,
+        "Type": "Periodic",
+        "FilePaths": [
+            { "Path": "audio5.mp3" },
+            { "Path": "folder5", "FolderPlayMode": "All" }
+        ],
+        "Second": "0",
+        "Minute": "0",
+        "Hour": "18",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "*",
+        "CalendarType": "Persian",
+        "TriggerType": "Immediate"
+    },
+    {
+        "ItemId": 6,
+        "Type": "NonPeriodic",
+        "FilePaths": [
+            { "Path": "audio6.mp3" },
+            { "Path": "folder6", "FolderPlayMode": "Single" }
+        ],
+        "Trigger": "evening",
+        "CalendarType": "Persian",
+        "TriggerType": "Delayed",
+        "DelayMinutes": 15
+    },
+    {
+        "ItemId": 7,
+        "Type": "Periodic",
+        "FilePaths": [
+            { "Path": "audio7.mp3" },
+            { "Path": "folder7", "FolderPlayMode": "All" }
+        ],
+        "Second": "0",
+        "Minute": "0",
+        "Hour": "6",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "*",
+        "CalendarType": "Hijri",
+        "TriggerType": "Immediate"
+    },
+    {
+        "ItemId": 8,
+        "Type": "NonPeriodic",
+        "FilePaths": [
+            { "Path": "audio8.mp3" },
+            { "Path": "folder8", "FolderPlayMode": "Single" }
+        ],
+        "Trigger": "night",
+        "CalendarType": "Hijri",
+        "TriggerType": "Timed"
+    },
+    {
+        "ItemId": 9,
+        "Type": "Periodic",
+        "FilePaths": [
+            { "Path": "audio9.mp3" },
+            { "Path": "folder9", "FolderPlayMode": "All" }
+        ],
+        "Second": "0",
+        "Minute": "0",
+        "Hour": "12",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "*",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Immediate"
+    },
+    {
+        "ItemId": 10,
+        "Type": "NonPeriodic",
+        "FilePaths": [
+            { "Path": "audio10.mp3" },
+            { "Path": "folder10", "FolderPlayMode": "Single" }
+        ],
+        "Trigger": "midnight",
+        "CalendarType": "Gregorian",
+        "TriggerType": "Delayed",
+        "DelayMinutes": 20
     }
 ]
