Update file via DeepSync Chrome Extension

--- a/audio.conf
+++ b/audio.conf
@@ -16,6 +16,7 @@
         "Month": "*",
         "DayOfWeek": "*",
         "CalendarType": "Gregorian",
+        "Region": "US", // United States (Gregorian calendar)
         "TriggerType": "Immediate"
     },
     {
@@ -32,6 +33,7 @@
         "Month": "*",
         "DayOfWeek": "*",
         "CalendarType": "Gregorian",
+        "Region": "IR", // Iran (Gregorian calendar)
         "TriggerType": "Immediate"
     },
     {
@@ -42,7 +44,11 @@
             { "Path": "folder3", "FolderPlayMode": "All" }
         ],
         "Trigger": "morning",
-        "CalendarType": "Gregorian",
+        "DayOfMonth": "*",
+        "Month": "12", // Only in the 12th month (e.g., Dhul-Hijjah in Hijri calendar)
+        "DayOfWeek": "6", // Only on Friday (6 = Friday in Hijri calendar)
+        "CalendarType": "Hijri",
+        "Region": "SA", // Saudi Arabia (Hijri calendar)
         "TriggerType": "Delayed",
         "DelayMinutes": 10
     },
@@ -54,7 +60,11 @@
             { "Path": "folder4", "FolderPlayMode": "Single" }
         ],
         "Trigger": "afternoon",
-        "CalendarType": "Gregorian",
+        "DayOfMonth": "*",
+        "Month": "*",
+        "DayOfWeek": "6", // Only on Friday (6 = Friday in Persian calendar)
+        "CalendarType": "Persian",
+        "Region": "IR", // Iran (Persian calendar)
         "TriggerType": "Timed"
     },
     {
@@ -71,6 +81,7 @@
         "Month": "*",
         "DayOfWeek": "*",
         "CalendarType": "Persian",
+        "Region": "IR", // Iran (Persian calendar)
         "TriggerType": "Immediate"
     },
     {
@@ -81,7 +92,11 @@
             { "Path": "folder6", "FolderPlayMode": "Single" }
         ],
         "Trigger": "evening",
+        "DayOfMonth": "15", // Only on the 15th day of the month
+        "Month": "*",
+        "DayOfWeek": "*",
         "CalendarType": "Persian",
+        "Region": "IR", // Iran (Persian calendar)
         "TriggerType": "Delayed",
         "DelayMinutes": 15
     },
@@ -99,6 +114,7 @@
         "Month": "*",
         "DayOfWeek": "*",
         "CalendarType": "Hijri",
+        "Region": "SA", // Saudi Arabia (Hijri calendar)
         "TriggerType": "Immediate"
     },
     {
@@ -109,35 +125,11 @@
             { "Path": "folder8", "FolderPlayMode": "Single" }
         ],
         "Trigger": "night",
-        "CalendarType": "Hijri",
-        "TriggerType": "Timed"
-    },
-    {
-        "ItemId": 9,
-        "Type": "Periodic",
-        "FilePaths": [
-            { "Path": "audio9.mp3" },
-            { "Path": "folder9", "FolderPlayMode": "All" }
-        ],
-        "Second": "0",
-        "Minute": "0",
-        "Hour": "12",
         "DayOfMonth": "*",
         "Month": "*",
-        "DayOfWeek": "*",
-        "CalendarType": "Gregorian",
-        "TriggerType": "Immediate"
-    },
-    {
-        "ItemId": 10,
-        "Type": "NonPeriodic",
-        "FilePaths": [
-            { "Path": "audio10.mp3" },
-            { "Path": "folder10", "FolderPlayMode": "Single" }
-        ],
-        "Trigger": "midnight",
-        "CalendarType": "Gregorian",
-        "TriggerType": "Delayed",
-        "DelayMinutes": 20
+        "DayOfWeek": "6", // Only on Friday (6 = Friday in Hijri calendar)
+        "CalendarType": "Hijri",
+        "Region": "SA", // Saudi Arabia (Hijri calendar)
+        "TriggerType": "Timed"
     }
 ]
