Update file via DeepSync Chrome Extension

--- a/Ai.conf
+++ b/Ai.conf
@@ -1,1 +1,68 @@
-//
+//Be Naame Khoda
+//FileName: Ai.conf
+
+// ============================================================
+// File: Ai.conf
+// Description: Configuration file for project reminders and tips.
+// Author: [Your Name]
+// Created: [Creation Date]
+// Last Modified: [Last Modified Date]
+// Version: 1.0
+// ============================================================
+
+// ==================== REMINDERS & TIPS ======================
+
+1. **File Headers**:
+   - Always add the following header to every new file you create:
+     ```
+     //Be Naame Khoda
+     //FileName: [FileName].cs
+     ```
+   - Example:
+     ```csharp
+     //Be Naame Khoda
+     //FileName: Program.cs
+     ```
+
+2. **Logging**:
+   - Use the `Logger.LogMessage` method for logging important events.
+   - Keep logs concise and meaningful. Avoid excessive logging.
+
+3. **Async/Await**:
+   - Prefer asynchronous programming (`async/await`) over blocking calls like `Thread.Sleep`.
+   - Use `TaskCompletionSource` for event-driven async operations.
+
+4. **Error Handling**:
+   - Always wrap critical code in `try-catch` blocks.
+   - Log exceptions using `Logger.LogMessage`.
+
+5. **Code Formatting**:
+   - Follow consistent indentation (4 spaces per level).
+   - Use meaningful variable and method names.
+   - Add comments to explain complex logic.
+
+6. **Testing**:
+   - Test edge cases (e.g., empty folders, invalid files, etc.).
+   - Verify that all events (e.g., `PlaylistFinished`) are handled correctly.
+
+7. **Configuration**:
+   - Store configuration settings in `AppSettings.conf` or similar files.
+   - Use `ConfigManager` to load and save configurations.
+
+8. **Folder Structure**:
+   - Keep the project organized with clear folder structures:
+     - `/AudioFiles`: For audio files.
+     - `/Logs`: For log files.
+     - `/Config`: For configuration files.
+
+9. **Version Control**:
+   - Use Git for version control.
+   - Commit frequently with meaningful commit messages.
+
+10. **Documentation**:
+    - Add comments to explain the purpose of classes and methods.
+    - Update this `Ai.conf` file with new tips as needed.
+
+// ============================================================
+// End of File
+// ============================================================
