--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "include": ["*.js","*.json","*.html","*.MD","*.cs","audio.conf","Ai.conf"], 
+  "include": ["*.js","*.css","*.json","*.html","*.MD","*.cs","audio.conf","Ai.conf"], 
   "exclude": ["*.config","*.sln","*.csproj" ,"Properties/*"] 
 }
