--- a/config.json
+++ b/config.json
@@ -1,4 +1,16 @@
 {
-  "include": ["*.js","*.css","*.json","*.html","*.MD","*.cs","audio.conf","Ai.conf"], 
-  "exclude": ["*.config","*.sln","*.csproj" ,"Properties/*" ,"wwwroot/fonts/*","bootstrap.min.css","light-bootstrap-dashboard.css","bootstrap.min.js","jquery.min.js","light-bootstrap-dashboard.js" ,"wwwroot/img/*"] 
+  "include": ["*.js", "*.css", "*.json", "*.html", "*.MD", "*.cs", "audio.conf", "Ai.conf"],
+  "exclude": [
+    "*.config",
+    "*.sln",
+    "*.csproj",
+    "Properties/*",
+    "wwwroot/fonts/*",
+    "bootstrap.min.css",
+    "light-bootstrap-dashboard.css",
+    "bootstrap.min.js",
+    "jquery.min.js",
+    "light-bootstrap-dashboard.js",
+    "wwwroot/img/*"
+  ]
 }
