--- a/RadioScheduler.csproj
+++ b/RadioScheduler.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ConfigManager.cs" />
     <Compile Include="CurrentTrigger.cs" />
     <Compile Include="FileHashHelper.cs" />
+    <Compile Include="FilePathItem.cs" />
     <Compile Include="InstantPlayManager.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PrayTime.cs" />
