--- a/packages.config
+++ b/packages.config
@@ -11,4 +11,5 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
+  <package id="System.Speech" version="9.0.0" targetFramework="net472" />
 </packages>
