--- a/AppSettings.conf
+++ b/AppSettings.conf
@@ -5,7 +5,8 @@
   "Application": {
     "Latitude": 29.5916,
     "Longitude": 52.5837,
-    "TimeZone": 3.5,
+    "TimeZoneId": "Asia/Tehran",
+	"Region ": "IR",
     "CalculationMethod": "Tehran",
     "AsrMethod": "Shafii",
     "TimeFormat": "Time24",
