--- a/packages.config
+++ b/packages.config
@@ -9,7 +9,9 @@
   <package id="NAudio.WinForms" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.WinMM" version="2.2.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Speech" version="9.0.1" targetFramework="net472" />
+  <package id="TimeZoneConverter" version="7.0.0" targetFramework="net472" />
 </packages>
