--- a/AppSettings.conf
+++ b/AppSettings.conf
@@ -5,7 +5,7 @@
   "Application": {
     "Latitude": 29.5916,
     "Longitude": 52.5837,
-    "TimeZoneId": "Iran Standard Time",
+    "TimeZoneId": "Asia/Tehran",
 	"Region ": "IR",
     "CalculationMethod": "Tehran",
     "AsrMethod": "Shafii",
